@@ -10,6 +10,7 @@ struct msg {
 struct kill {
 	string weapon = 1;
 	string action = 2;
+	int how_often = 3;
 }
 
 struct run {
